progress on arrays put together

--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-designing-statistics-calculator.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-designing-statistics-calculator.mdx
@@ -10,18 +10,18 @@ title: Designing Statistics Calculator
 |   |   |
 |---|---|
 | **Name** | *Statistics Calculator* |
-| **Description** | Reads values from the user and calculates a range of statis- tics that are output to the Terminal. Statistics output include **mean**, **maximum**, **sum**, and **variance**.|
+| **Description** | Reads values from the user and calculates a range of statistics that are output to the Terminal. Statistics output include **mean**, **maximum**, **sum**, and **variance**.|
 
 <div class="caption"><span class="caption-figure-nbr">Table x.y: </span>Description of the <code>Statistics Calculator</code>program</div><br/>
 
 As before, the process to design and implement this program will follow a number of steps:
 
 1. Understand the problem, and get some ideas on the tasks that need to be performed.
-2. Choose the artefacts we will create and use
-3. Design the control flow for the procedural<sup>[1](#FootnoteProceduralArtefacts)</sup> artefacts
-4. Map these artefacts to code
-5. Compile and run the program
+2. Choose the building blocks we will create and use
+3. Design the control flow for the functions and procedures we need
+4. Implement our design
+5. Compile, run, and test the program
 
+## Understanding Statistics Calculator
 
-<hr class="footnote"/>
-<div id="FootnoteProceduralArtefacts" class="footnote"><sup>1</sup>The program, and any Functions and Procedures</div>
+Most of the ideas around the Statistics Calculator should be fairly straight forward. The main things to be checked are the equations needed to calculate the different statistics, and then to convert these into steps for the computer.
