--- a/src/content/docs/book/part-3-programs-as-concepts/1-back-to-c-sharp/1-concepts/10-branching-statements.mdx
+++ b/src/content/docs/book/part-3-programs-as-concepts/1-back-to-c-sharp/1-concepts/10-branching-statements.mdx
@@ -4,7 +4,7 @@ title: Branching Statements
 
 Branching statements allow you to select one of a number of path for control to move to.
 
-By default the statements within a program are run in sequence. You can think of this as the standard **flow** of execution: with the computer moving from one statement to the next.
+By default, the statements within a program are run in sequence. You can think of this as the standard **flow** of execution: with the computer moving from one statement to the next.
 
 Control flow statements allow you to alter this standard sequential flow, adding instructions that to **branch** and **repeat** statements. This gives us three basic control flow structures: **sequence**, **selection**, and **repetition**.
 
@@ -12,7 +12,7 @@ Sequence is the basis for all of the program flow. The statements within a metho
 
 ### If statement
 
-Selection, or branching, statements allow you to add places in your code where a decision is made and one of a number of paths is chosen. The most common of these if the **if statement**. Using the if statement you can choose whether some code is executed or skipped. You can also have an optional **else** branch which is run if the main branch is skipped.
+Selection, or branching, statements allow you to add places in your code where a decision is made and one of a number of paths is chosen. The most common of these is the **if statement**. Using the if statement you can choose whether some code is executed or skipped. You can also have an optional **else** branch which is run if the main branch is skipped.
 
 For example, the following code will only print the message _if_ the value of the age variable is less than 18.
 
@@ -24,6 +24,7 @@ if ( age < 18 )
 }
 Console.WriteLine("The end");
 ```
+
 ![This diagram shows a visual representation of the if statement](./images/sit771-BranchingStatements.png)
 
 With an **else** branch, you can provide a path that is run when the condition is false.
