small progress on stats calc

--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-00-designing-statistics-calculator.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-00-designing-statistics-calculator.mdx
@@ -1,5 +1,5 @@
 ---
-title: Designing Statistics Calculator
+title: Statistics Calculator
 ---
 
 [Table x.y](#TableStatisticsCalculator) contains a description of a small statistics programs. This program reads a number of values from the user, and then outputs some statistics calculated from these values. This program will make use of arrays to store the values entered, and then calculate the required statistics.
