--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-01-choosing-artefacts.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-01-choosing-artefacts.mdx
@@ -1,8 +1,8 @@
 ---
-title: Choosing Artefacts
+title: Designing the Statistics Calculator
+sidebar:
+  label: " - Design"
 ---
-
-## Choosing Artefacts for Statistics Calculator
 
 In understanding these concepts we have uncovered some Functions that will be included in the program’s design.
 With the calculations thought through the design seems to be coming together. So far we have thought through the steps needed to calculate the output, but we have not thought about how these values will be read into the program.
