--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/02-02-calculating-sum.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/02-02-calculating-sum.mdx
@@ -4,12 +4,11 @@ sidebar:
   label: " - Calculating Sum"
 ---
 
-The sum is the simplest of the Statistics to calculate. This involves adding together *all* the numbers in the array. The main issue here is that the computer cannot add *all* of these values together, and we must rethink our logic to express it in terms of processing *for each* element.
+The sum is the simplest of the statistics to calculate. This involves adding together *all* the numbers in the array. The main issue here is that the computer cannot add *all* of these values together, and we must rethink our logic to express it in terms of processing *for each* element.
 
 Think about the way you would sum a list of numbers, this is now the task you need to code for the computer. What is it that you do with each number? To think this through write a list of random numbers down. Keep it simple, and make each number between 0 and 9. Now calculate the sum. Do it slowly, and think about the tasks that you are performing for each number. Allow yourself only to look at one number at a time.
 
 You should have noticed that you can achieve this by keeping a running total, and that you add the value of each number from the list to that total. When you have done this for each number in the list, you have the sum of all values. The pseudocode for this is shown in [Listing x.y](#ListingSum)
-
 
 <br/>
 <a id="ListingSum"></a>
@@ -38,3 +37,5 @@ There are three key things to notice about the pseudocode in [Listing x.y](#List
 The for loop will repeat its body once for each value in the array. The `i` variable will be updated to have the *current* index value each time the loop is repeated. Within the loop the *i<sup>th</sup>* value from the array is accessed. This is how the for loop processes each of the values from the array.
 
 The `total` value keeps track of the current running total. Before the loop its value is set to 0, ensuring that it is appropriately initialised. In the body of the loop the *i<sup>th</sup>* value of the array is added to the `total`, and the result stored back into `total`. This means that by the end of the loop the `total` variable is now storing the sum of all the elements of the array.
+
+So we have a plan for how we can achieve the sum of the data in the array.
