Clange calculator example written stack added in org code

--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-00-designing-statistics-calculator.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-00-designing-statistics-calculator.mdx
@@ -10,7 +10,7 @@ title: Statistics Calculator
 |   |   |
 |---|---|
 | **Name** | *Statistics Calculator* |
-| **Description** | Reads values from the user and calculates a range of statistics that are output to the Terminal. Statistics output include **mean**, **maximum**, **sum**, and **variance**.|
+| **Description** | Reads values from the user and calculates a range of statistics that are output to the Terminal. Statistics output include **mean**, **maximum**, and **sum**.|
 
 <div class="caption"><span class="caption-figure-nbr">Table x.y: </span>Description of the <code>Statistics Calculator</code>program</div><br/>
 
