--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-01-calculating-sum.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-01-calculating-sum.mdx
@@ -1,7 +1,7 @@
 ---
-title: Calculating Sum
+title: Plan for Sum
 sidebar:
-  label: " - Calculating Sum"
+  label: " - Plan for Sum"
 ---
 
 The sum is the simplest of the statistics to calculate. This involves adding together *all* the numbers in the array. The main issue here is that the computer cannot add *all* of these values together, and we must rethink our logic to express it in terms of processing *for each* element.
