--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-02-calculating-mean.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/2-put-together/01-02-calculating-mean.mdx
@@ -1,7 +1,7 @@
 ---
-title: Calculating Mean
+title: Plan for Mean
 sidebar:
-  label: " - Calculating Mean"
+  label: " - Plan for Mean"
 ---
 
 The mean of a list of values is the sum of those values divided by the number of values. In the case of the statistics calculator, we already a plan for the `sum` function, so the `mean` function does not need to recalculate the sum, it can just call the `sum` and use the result returned.
